# RFDRepoMan

./: .env.example  .gitignore  SECURITY.md  pyproject.toml
docs/: DIAGNOSTIC_FINDINGS.md  SECRETS_SCAN.md  TOKEN_SETUP.md
docs/adr/: ADR-001-no-shell-passthrough.md  ADR-002-force-push-not-exposed.md  ADR-003-policy-opt-in-only.md  ADR-004-gh-fallback-explicit-opt-in.md  ADR-005-bounded-execution-layers.md
docs/directives/: phase-1-repo-state-github-executor-policy-layer.md  phase-10-global-budget-hardening.md  phase-11-subprocess-environment-diagnostics.md  phase-12-discovery-budget-and-credential-diagnostics.md  phase-2-public-release-hardening.md  phase-3-full-mcp-tool-surface-registration.md  phase-4-self-verification-layer.md  phase-5-per-repo-toolchain-detection.md  phase-6-token-setup-url-generator.md  phase-7-gh-cli-credential-fallback.md  phase-8-mcp-safe-client-construction.md  phase-9-bounded-reconciliation-pagination-cache.md
docs/state/: current.md
repoman/: __init__.py  ci_status.py  config.py  discover.py  gate.py  git_actions.py  github_actions.py  github_planning.py  github_status.py  phase_bridge.py  policy.py  reconcile_cache.py  self_verify.py  server.py  state_reader.py  status.py  token_setup.py  toolchain.py
repoman/hosts/: __init__.py  bitbucket_stub.py  (+1 more)
scripts/: diagnose_subprocess_env.py  verify_github_status.py  verify_policy_override.py
tests/: test_phase1.py  test_phase10.py  test_phase12.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py
