[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rfd-repoman"
version = "0.1.0"
description = "Scoped git and GitHub MCP operations"
requires-python = ">=3.11"
dependencies = ["fastmcp>=2.0", "PyGithub>=2.3"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
